--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,9 @@ jspm_packages
 
 lib
 index.js
+coveralls.yml
+# Coverage directory used by tools like istanbul
+coverage
+.nyc_output/
+# Compiled binary addons (http://nodejs.org/api/addons.html)
+build/Release
