--- a/package.json
+++ b/package.json
@@ -15,30 +15,45 @@
     "url": "git+https://github.com/eldimious/network-avatar-picker.git"
   },
   "author": "Dimos Botsaris <botsaris.d@gmail.com>",
+  "keywords": [
+    "avatar",
+    "avatar-service",
+    "profile-picture",
+    "profile-image",
+    "social-network",
+    "image",
+    "facebook",
+    "instagram",
+    "twitter",
+    "tumblr",
+    "github",
+    "youtube",
+    "vimeo"
+  ],
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/eldimious/network-avatar-picker/issues"
   },
   "homepage": "https://github.com/eldimious/network-avatar-picker#readme",
   "dependencies": {
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
-    "cheerio": "^1.0.0-rc.2",
-    "coveralls": "^3.0.3",
-    "mocha": "^6.1.4",
-    "nyc": "^14.0.0",
-    "request": "^2.82.0",
-    "sinon": "^7.3.2",
-    "supertest": "^4.0.2"
+    "cheerio": "^1.0.0-rc.3",
+    "request": "^2.82.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "coveralls": "^3.0.3",
     "eslint": "^4.7.2",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.3.0"
+    "eslint-plugin-react": "^7.3.0",
+    "mocha": "^6.1.4",
+    "nyc": "^14.0.0",
+    "sinon": "^7.3.2",
+    "supertest": "^4.0.2"
   }
 }
