--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-react": "^7.3.0",
     "mocha": "^6.1.4",
     "nyc": "^14.0.0",
+    "redis-mock": "^0.43.0",
     "sinon": "^7.3.2",
     "supertest": "^4.0.2"
   }
